--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rust-http"]
 	path = rust-http
 	url = https://github.com/chris-morgan/rust-http.git
+[submodule "rust-pcre"]
+	path = rust-pcre
+	url = git@github.com:am0d/rust-pcre.git
