--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "rust-http"]
 	path = rust-http
 	url = https://github.com/chris-morgan/rust-http.git
+[submodule "pcre"]
+	path = pcre
+	url = https://github.com/am0d/rust-pcre.git
+    branch = rust-master
