--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "rust-http"]
 	path = rust-http
-	url = https://github.com/chris-morgan/rust-http.git
+	url = https://github.com/am0d/rust-http.git
 [submodule "pcre"]
 	path = pcre
 	url = https://github.com/am0d/rust-pcre.git
