--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 before_install:
-      - yes | sudo add-apt-repository ppa:hansjorg/rust
-      - sudo apt-get update
+    - yes | sudo add-apt-repository ppa:hansjorg/rust
+    - sudo apt-get update
 install:
-      - sudo apt-get install rust-nightly
+    - sudo apt-get install rust-nightly
+    - sudo apt-get --download-only install libpcre3gsa
+    - sudo dpkg -i --force-overwrite /var/cache/apt/archives/libpcre3gsa_*.deb
+    - sudo apt-get --download-only install libpcrecpp0gsa
+    - sudo dpkg -i --force-overwrite /var/cache/apt/archives/libpcrecpp0gsa_*.deb
+    - sudo apt-get --download-only install libpcre3gsa-dev
+    - sudo dpkg -i --force-overwrite /var/cache/apt/archives/libpcre3gsa-dev_*.deb
+    - sudo apt-get install rust-nightly
 script:
-      - make 
-
+    - make 
 notifications:
     email:
         - damien.schoof+github@gmail.com
