--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+env:
+    - PCRE_LIBDIR="/opt/gimp-standalone/lib/x86_64-linux-gnu"
+    - LD_LIBRARY_PATH="/opt/gimp-standalone/lib/x86_64-linux-gnu"
 before_install:
-    - yes | sudo add-apt-repository ppa:hansjorg/rust
-    - sudo apt-get update
+  - yes | sudo add-apt-repository ppa:hansjorg/rust
+  - yes | sudo add-apt-repository ppa:otto-kesselgulasch/gimp-standalone
+  - sudo apt-get update
 install:
     - sudo apt-get install rust-nightly
     - sudo apt-get --download-only install libpcre3gsa
