--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ install:
     - sudo dpkg -i --force-overwrite /var/cache/apt/archives/libpcre3gsa-dev_*.deb
     - sudo apt-get install rust-nightly
 script:
-    - make 
+    - make "PCRE_LIBDIR=$PCRE_LIBDIR"
+    - make test "PCRE_LIBDIR=$PCRE_LIBDIR"
 notifications:
     email:
         - damien.schoof+github@gmail.com
