--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ tags = ["web", "http", "library"]
 
 [[bin]]
 name = "server"
-path = "src/web/main.rs"
+#path = "src/web/main.rs"
 
 [dependencies.http]
 git = "https://github.com/am0d/rust-http.git"
