--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+env:
+    global:
+        - LD_LIBRARY_PATH: /usr/local/lib
 script:
   - cargo build
   - make all
@@ -9,8 +12,8 @@ install:
   - wget http://static.rust-lang.org/dist/rust-nightly-x86_64-unknown-linux-gnu.tar.gz -O - | sudo tar zxf - --strip-components 1 -C /usr/local
 script:
   - rustc --version
-  - cargo build
-  - cargo test
+  - cargo build -v
+  - cargo test -v
 notifications:
     email:
         - damien.schoof+github@gmail.com
